--- a/emacs/PKGBUILD
+++ b/emacs/PKGBUILD
@@ -1,25 +1,33 @@
-# $Id: PKGBUILD 184371 2013-05-06 19:36:58Z foutrelis $
+# $Id: PKGBUILD 192474 2013-08-12 20:25:41Z eric $
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
 # Contributor: Renchi Raju <renchi@green.tam.uiuc.edu>
 
 pkgname=emacs
 pkgver=24.3
-pkgrel=2
+pkgrel=4
 pkgdesc="The extensible, customizable, self-documenting real-time display editor"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/emacs/emacs.html"
 license=('GPL3')
-depends=('librsvg' 'gpm' 'libxpm' 'libotf' 'm17n-lib' 'hicolor-icon-theme' 'desktop-file-utils' 'alsa-lib' 'imagemagick')
+depends=('librsvg' 'gpm' 'giflib' 'libxpm' 'libotf' 'm17n-lib' 'hicolor-icon-theme' 'desktop-file-utils' 'alsa-lib' 'imagemagick')
 install=emacs.install
-source=(ftp://ftp.gnu.org/gnu/emacs/$pkgname-$pkgver.tar.xz{,.sig})
+source=(ftp://ftp.gnu.org/gnu/emacs/$pkgname-$pkgver.tar.xz{,.sig}
+        emacs-24.3-giflib5.patch)
 md5sums=('ea9ed000ca165280265aabb55b9afbd7'
-         '3f6990fabfbe1d5f3cd58bace4eb20f1')
+         'SKIP'
+         '560cdf463299e059c5fadf474bcba218')
+
+prepare() {
+  cd $pkgname-$pkgver
+  patch -Np0 -i ../emacs-24.3-giflib5.patch
+}
 
 build() {
   cd "$srcdir"/$pkgname-$pkgver
   ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
     --localstatedir=/var --with-x-toolkit=gtk2 --with-xft \
-    --without-gconf --without-gsettings --without-gif
+    --without-gconf --without-gsettings
+# --without-gif
   make
 }
 
